apache_guacamole_k8s-master/guacamole/guacamole-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-web
  namespace: guacamole
  labels:
    app: guacamole-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guacamole-web
  template:
    metadata:
      labels:
        app: guacamole-web
    spec:
      serviceAccountName: guacamole-sa
      containers:
      - name: guacamole-web
        image: jilanigh/custom-guac-ui:1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-web
  namespace: guacamole
spec:
  selector:
    app: guacamole-web
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
  sessionAffinity: ClientIP
