apache_guacamole_k8s-master/guacamole/guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  labels:
    app: guacd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
      - name: guacd
        image: guacamole/guacd
        ports:
        - containerPort: 4822
          name: guacd
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  labels:
    app: guacd
spec:
  ports:
  - port: 4822
    targetPort: 4822
    name: guacd
  selector:
    app: guacd
  clusterIP: None
